fix(Radio): :bug: Removed unwanted spacing when no label is defined (#1768)

--- a/packages/css/react-css-modules.css
+++ b/packages/css/react-css-modules.css
@@ -1681,9 +1681,43 @@
   --fds-radio-focus-border-width: 3px;
   --fds-radio-background: var(--fds-semantic-background-default);
   --fds-radio-border-color: var(--fds-semantic-border-input-default);
-  --fds-radio-border__hover: 0 0 0 6px var(--fds-semantic-surface-info-subtle-hover);
+  --fds-radio-border__hover: 0 0 0 calc((2.75rem - var(--fds-radio-size)) / 2) var(--fds-semantic-surface-info-subtle-hover);
 
+  display: grid;
+}
+
+.fds-radio-container-7a9bd584:has(.fds-radio-label-7a9bd584) {
+  grid-template-columns: var(--fds-checkbox-size) auto;
+  gap: var(--fds-spacing-2);
+}
+
+/* Radio */
+.fds-radio-input-7a9bd584 {
   position: relative;
+  width: var(--fds-radio-size);
+  height: var(--fds-radio-size);
+  z-index: 1;
+  appearance: none;
+  outline: none;
+  cursor: pointer;
+  margin: 0;
+  align-self: center;
+  box-shadow: inset 0 0 0 2px var(--fds-radio-border-color);
+  background: var(--fds-radio-background);
+  border-radius: 50%;
+}
+
+.fds-radio-input-7a9bd584::before {
+  position: absolute;
+  content: '';
+  display: block;
+  width: 2.75rem;
+  height: 2.75rem;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  cursor: pointer;
+  border-radius: var(--fds-border_radius-medium);
 }
 
 .fds-radio-label-7a9bd584 {
@@ -1696,77 +1730,56 @@
   cursor: pointer;
 }
 
-/* Radio */
-.fds-radio-label-7a9bd584::before {
-  content: '';
-  width: var(--fds-radio-size);
-  height: var(--fds-radio-size);
-  box-shadow: inset 0 0 0 2px var(--fds-radio-border-color);
-  background: var(--fds-radio-background);
-  border-radius: 50%;
-  flex-shrink: 0;
-  margin-inline: 6px;
-  margin-block: 6px;
-}
-
 .fds-radio-description-7a9bd584 {
-  padding-left: calc(var(--fds-radio-size) + 12px + var(--fds-spacing-1));
-  margin-top: calc(var(--fds-spacing-2) * -1);
+  margin-top: calc(var(--fds-spacing-3) * -1);
   color: var(--fds-semantic-text-neutral-subtle);
-}
-
-.fds-radio-input-7a9bd584 {
-  position: absolute;
-  width: 2.75rem;
-  height: 2.75rem;
-  z-index: 1;
-  opacity: 0;
-  cursor: pointer;
-  margin: 0;
+  grid-column: 2;
 }
 
 .fds-radio-disabled-7a9bd584 > .fds-radio-input-7a9bd584,
 .fds-radio-disabled-7a9bd584 > .fds-radio-label-7a9bd584,
-.fds-radio-disabled-7a9bd584 > .fds-radio-label-7a9bd584::before {
+.fds-radio-disabled-7a9bd584 > .fds-radio-input-7a9bd584::before {
   cursor: not-allowed;
 }
 
 .fds-radio-disabled-7a9bd584 > .fds-radio-label-7a9bd584,
-.fds-radio-disabled-7a9bd584 > .fds-radio-label-7a9bd584::before,
+.fds-radio-disabled-7a9bd584 > .fds-radio-input-7a9bd584,
 .fds-radio-disabled-7a9bd584 > .fds-radio-description-7a9bd584 {
   opacity: var(--fds-opacity-disabled);
 }
 
-.fds-radio-input-7a9bd584:focus-visible + .fds-radio-label-7a9bd584::before {
+.fds-radio-readonly-7a9bd584 > .fds-radio-input-7a9bd584,
+.fds-radio-readonly-7a9bd584 > .fds-radio-label-7a9bd584,
+.fds-radio-readonly-7a9bd584 > .fds-radio-input-7a9bd584::before {
+  cursor: default;
+}
+
+.fds-radio-input-7a9bd584:focus-visible {
+  outline-offset: 0;
   outline: var(--fds-radio-focus-border-width) solid var(--fds-semantic-border-focus-outline);
   box-shadow: inset 0 0 0 var(--fds-radio-focus-border-width) var(--fds-semantic-border-focus-boxshadow), inset 0 0 0 6px var(--fds-radio-background);
 }
 
-.fds-radio-input-7a9bd584:checked + .fds-radio-label-7a9bd584::before {
+.fds-radio-input-7a9bd584:checked {
   --fds-radio-border-color: var(--fds-semantic-border-input-hover);
 
   background: var(--fds-radio-border-color);
 }
 
-.fds-radio-readonly-7a9bd584 > .fds-radio-input-7a9bd584 + .fds-radio-label-7a9bd584::before {
+.fds-radio-readonly-7a9bd584 > .fds-radio-input-7a9bd584 {
   --fds-radio-border-color: var(--fds-semantic-border-neutral-subtle);
   --fds-radio-background: var(--fds-semantic-surface-neutral-subtle);
 }
 
-.fds-radio-input-7a9bd584:checked:not(:focus-visible) + .fds-radio-label-7a9bd584::before {
+.fds-radio-input-7a9bd584:checked:not(:focus-visible) {
   box-shadow: inset 0 0 0 2px var(--fds-radio-border-color), inset 0 0 0 6px var(--fds-radio-background);
 }
 
-.fds-radio-readonly-7a9bd584 > .fds-radio-input-7a9bd584,
-.fds-radio-readonly-7a9bd584 > .fds-radio-label-7a9bd584 {
-  cursor: default;
-}
-
-.fds-radio-readonly-7a9bd584 > .fds-radio-input-7a9bd584:checked + .fds-radio-label-7a9bd584::before {
+.fds-radio-readonly-7a9bd584 > .fds-radio-input-7a9bd584:checked {
   background: var(--fds-semantic-border-neutral-default);
 }
 
-.fds-radio-error-7a9bd584 > .fds-radio-input-7a9bd584:not(:disabled, :focus-visible) + .fds-radio-label-7a9bd584::before {
+.fds-radio-error-7a9bd584 > .fds-radio-input-7a9bd584:not(:disabled, :focus-visible) {
   --fds-radio-border-color: var(--fds-semantic-border-danger-default);
 }
 
@@ -1778,19 +1791,19 @@
     color: var(--fds-semantic-text-action-hover);
   }
 
-  .fds-radio-container-7a9bd584:not(.fds-radio-readonly-7a9bd584, .fds-radio-disabled-7a9bd584) > .fds-radio-input-7a9bd584:hover:not(:checked) + .fds-radio-label-7a9bd584::before {
+  .fds-radio-container-7a9bd584:not(.fds-radio-readonly-7a9bd584, .fds-radio-disabled-7a9bd584) > .fds-radio-input-7a9bd584:hover:not(:checked) {
     --fds-radio-border-color: var(--fds-semantic-border-input-hover);
 
     box-shadow: var(--fds-radio-border__hover), inset 0 0 0 2px var(--fds-radio-border-color);
   }
 
-  .fds-radio-container-7a9bd584:not(.fds-radio-readonly-7a9bd584, .fds-radio-disabled-7a9bd584) > .fds-radio-input-7a9bd584:hover:checked + .fds-radio-label-7a9bd584::before {
+  .fds-radio-container-7a9bd584:not(.fds-radio-readonly-7a9bd584, .fds-radio-disabled-7a9bd584) > .fds-radio-input-7a9bd584:hover:checked {
     --fds-radio-border-color: var(--fds-semantic-border-input-hover);
 
     box-shadow: var(--fds-radio-border__hover), inset 0 0 0 2px var(--fds-radio-border-color), inset 0 0 0 6px var(--fds-radio-background);
   }
 
-  .fds-radio-container-7a9bd584:not(.fds-radio-readonly-7a9bd584, .fds-radio-disabled-7a9bd584) > .fds-radio-input-7a9bd584:hover:checked:focus-visible + .fds-radio-label-7a9bd584::before {
+  .fds-radio-container-7a9bd584:not(.fds-radio-readonly-7a9bd584, .fds-radio-disabled-7a9bd584) > .fds-radio-input-7a9bd584:hover:checked:focus-visible {
     box-shadow: var(--fds-radio-border__hover), inset 0 0 0 var(--fds-radio-focus-border-width) var(--fds-semantic-border-focus-boxshadow),
       inset 0 0 0 6px var(--fds-radio-background);
   }
@@ -1798,52 +1811,22 @@
 
 /** Sizing */
 
-.fds-radio-small-7a9bd584,
-.fds-radio-small-7a9bd584 .fds-radio-label-7a9bd584 {
-  min-height: var(--fds-sizing-8);
-}
-
-.fds-radio-medium-7a9bd584,
-.fds-radio-medium-7a9bd584 .fds-radio-label-7a9bd584 {
-  min-height: var(--fds-sizing-10);
-}
-
-.fds-radio-large-7a9bd584,
-.fds-radio-large-7a9bd584 .fds-radio-label-7a9bd584 {
-  min-height: var(--fds-sizing-12);
-}
-
 .fds-radio-small-7a9bd584 {
   --fds-radio-size: 1.5rem;
 
-  min-width: var(--fds-sizing-8);
-}
-
-.fds-radio-small-7a9bd584 .fds-radio-input-7a9bd584 {
-  left: -0.25rem;
-  top: -0.25rem;
+  min-height: var(--fds-sizing-8);
 }
 
 .fds-radio-medium-7a9bd584 {
   --fds-radio-size: 1.75rem;
 
-  min-width: var(--fds-sizing-10);
-}
-
-.fds-radio-medium-7a9bd584 .fds-radio-input-7a9bd584 {
-  left: 0;
-  top: 0;
+  min-height: var(--fds-sizing-10);
 }
 
 .fds-radio-large-7a9bd584 {
   --fds-radio-size: 2rem;
 
-  min-width: var(--fds-sizing-12);
-}
-
-.fds-radio-large-7a9bd584 .fds-radio-input-7a9bd584 {
-  left: 0;
-  top: 0.25rem;
+  min-height: var(--fds-sizing-12);
 }
 
 .fds-group-inline-f6df9230 {
